# PA-Project

./: .env.template  .gitignore  README.md  package.json  pyproject.toml  tsconfig.base.json
profiles/: default.yml
server/: main.py  utils.py
server/agents/: fileSystemAgent.py  masterAgent.py
server/classes/: Agent.py  Profile.py  SIOData.py  Server.py
web/: index.html  tsconfig.json  vite.config.ts  vite.d.ts
web/src/base/: App.tsx  index.css
web/src/base/Panels/: DevPanel.module.css  DevPanel.tsx  UIPanel.module.css  UIPanel.tsx  data.ts
web/src/base/Panels/Menu/: Chat.module.css  Chat.tsx  Connect.module.css  Connect.tsx  Profile.module.css  Profile.tsx
web/src/vrm/: AnimationHandler.ts  AudioHandler.ts  VRMDisplay.tsx  VRMDisplayContext.ts  VRMInstance.ts  idle.ts  utils.ts
web/src/vrm/animation/: afk1.ts  afk2.ts
