[project]
name = "pa-project"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "autogen-agentchat>=0.7.4",
    "autogen-ext[openai]>=0.7.4",
    "fastapi>=0.116.1",
    "httpx[http2]>=0.28.1",
    "openai[aiohttp]>=1.99.9",
    "python-dotenv>=1.1.1",
    "python-socketio>=5.13.0",
    "pytz>=2025.2",
    "pyyaml>=6.0.3",
    "rich>=14.1.0",
    "uvicorn>=0.37.0",
]
